[gd_scene load_steps=11 format=2]

[ext_resource path="res://challenges/week9/gfx/slot/slot.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week9/scenes/money/money.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week9/scenes/wheel/wheel.tscn" type="PackedScene" id=3]
[ext_resource path="res://challenges/week9/scenes/slot/slot.gd" type="Script" id=4]
[ext_resource path="res://challenges/week9/scenes/pull/pull.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/fonts/advanced_led_board-7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://challenges/week9/scenes/button/button.tscn" type="PackedScene" id=7]
[ext_resource path="res://common/sfx/clics/vanish.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 35
use_mipmaps = true
font_data = ExtResource( 6 )

[node name="slot" type="Node2D"]
script = ExtResource( 4 )

[node name="pull" parent="." instance=ExtResource( 5 )]
position = Vector2( 704, 193 )

[node name="slot_back" type="Node2D" parent="."]
z_index = -1
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="slot_back"]
margin_left = 378.0
margin_top = 122.0
margin_right = 656.0
margin_bottom = 276.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="wheels" type="Node2D" parent="."]

[node name="wheel_1" parent="wheels" instance=ExtResource( 3 )]
position = Vector2( 427, 243 )
scale = Vector2( 0.6, 0.48 )

[node name="wheel_2" parent="wheels" instance=ExtResource( 3 )]
position = Vector2( 518, 243 )
scale = Vector2( 0.6, 0.48 )
wheel_number = 2

[node name="wheel_3" parent="wheels" instance=ExtResource( 3 )]
position = Vector2( 613, 243 )
scale = Vector2( 0.6, 0.48 )
wheel_number = 3

[node name="slotMachine" type="Sprite" parent="."]
position = Vector2( 517, 292 )
texture = ExtResource( 1 )

[node name="money" parent="." instance=ExtResource( 2 )]
position = Vector2( 519, 442 )

[node name="message" type="Node2D" parent="."]
position = Vector2( 389, 284 )

[node name="ColorRect" type="ColorRect" parent="message"]
margin_top = -8.0
margin_right = 262.0
margin_bottom = 32.0
color = Color( 0.101961, 0.239216, 0.117647, 1 )

[node name="message" type="Label" parent="message"]
margin_left = 2.0
margin_right = 264.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.207843, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="free_movements" type="Label" parent="message"]
margin_left = -84.0
margin_top = 226.0
margin_right = -6.0
margin_bottom = 268.0
custom_colors/font_color = Color( 0.172549, 0.866667, 0.0156863, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1

[node name="buttons" type="Node2D" parent="."]

[node name="wheel_2_up_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 481, 347 )
scale = Vector2( 0.6, 0.6 )

[node name="wheel_2_down_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 482, 377 )
scale = Vector2( 0.6, 0.6 )
arrow_direction = 1

[node name="wheel_1_up_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 381, 347 )
scale = Vector2( 0.6, 0.6 )

[node name="wheel_1_down_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 359, 378 )
scale = Vector2( 0.6, 0.6 )
arrow_direction = 1

[node name="wheel_3_up_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 583, 347 )
scale = Vector2( 0.6, 0.6 )

[node name="wheel_3_down_button" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 605, 377 )
scale = Vector2( 0.6, 0.6 )
arrow_direction = 1

[node name="avoid_buttons" type="ColorRect" parent="buttons"]
margin_left = 347.0
margin_top = 337.0
margin_right = 692.0
margin_bottom = 413.0
color = Color( 1, 1, 1, 0 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="running" from="." to="pull" method="_on_slot_running"]
[connection signal="pulled" from="pull" to="." method="_on_pull_pulled"]
[connection signal="result" from="wheels/wheel_1" to="." method="_on_wheel_1_result"]
[connection signal="result" from="wheels/wheel_2" to="." method="_on_wheel_2_result"]
[connection signal="result" from="wheels/wheel_3" to="." method="_on_wheel_3_result"]
[connection signal="button_pressed" from="buttons/wheel_2_up_button" to="." method="_on_wheel_2_up_button_button_pressed"]
[connection signal="button_pressed" from="buttons/wheel_2_down_button" to="." method="_on_wheel_2_down_button_button_pressed"]
[connection signal="button_pressed" from="buttons/wheel_1_up_button" to="." method="_on_wheel_1_up_button_button_pressed"]
[connection signal="button_pressed" from="buttons/wheel_1_down_button" to="." method="_on_wheel_1_down_button_button_pressed"]
[connection signal="button_pressed" from="buttons/wheel_3_up_button" to="." method="_on_wheel_3_up_button_button_pressed"]
[connection signal="button_pressed" from="buttons/wheel_3_down_button" to="." method="_on_wheel_3_down_button_button_pressed"]
